Authors should not follow their proposals; also fixing layout issues

--- a/scss/_proposal.scss
+++ b/scss/_proposal.scss
@@ -61,7 +61,12 @@
   }
 
   .edit {
-    background: $darkblue;
+    background: $darkorange;
+    color: $white;
+  }
+
+  .follow {
+    background: $darkgreen;
     color: $white;
   }
 
