--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7932,7 +7932,10 @@ html .backdrop, html .modal-backdrop-bg, html .active .modal-backdrop-bg {
     background: #212121;
     color: #ffffff; }
   #proposal .edit {
-    background: #3f51b5;
+    background: #b76a32;
+    color: #ffffff; }
+  #proposal .follow {
+    background: #00796B;
     color: #ffffff; }
   #proposal .proposal-buttons, #proposal .proposal-badges {
     text-align: center; }
